k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: dashboard
spec:
  template:
    metadata:
      labels:
        policy.gatekeeper.sh/ignore-psp-readonlyrootfilesystem: "true"
    spec:
      containers:
        - name: dashboard
          image: shokohsc/k8s-ingress-dashboard
          securityContext:
            readOnlyRootFilesystem: false
          resources:
            limits:
              cpu: 1000m
              memory: 2048M
          volumeMounts:
            - name: temp
              mountPath: /app/node_modules/.vite/
      volumes:
        - name: temp
          emptyDir: {}
