k8s/overlays/shokohsc/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashboard
  annotations:
    dashboard.home.arpa/name: dev-dashboard
    dashboard.home.arpa/url: https://dev.dashboard.home.arpa
    dashboard.home.arpa/icon: wrench
spec:
  hostnames:
  - dev.dashboard.home.arpa
  parentRefs:
  - name: dashboard
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: dashboard
  rules:
  - backendRefs:
    - name: dashboard
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
