k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.shokohsc.home/name: k8s-ingress-dashboard
    dashboard.shokohsc.home/url: https://dev.dashboard.shokohsc.home
    dashboard.shokohsc.home/icon: wrench
spec:
  rules:
  - host: dev.dashboard.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8s-ingress-dashboard
            port:
              number: 80
  tls:
  - hosts:
    - dev.dashboard.shokohsc.home
    secretName: k8s-ingress-dashboard-cert
